--- a/src/main/resources/templates/registrazione_lettore.html
+++ b/src/main/resources/templates/registrazione_lettore.html
@@ -30,16 +30,28 @@
                     </div>
                 </div>
 
-                <label for="inputUsurname">Usurname</label>
-                <input type="text" id="inputUsurname" class="form-control" placeholder="usurname" required autofocus>
+                <div class="form-group row">
+                    <label for="inputUsername" class="col-form-label col-sm-3">Username</label>
+                    <div class="col-sm-8">
+                        <input type="text" id="inputUsername" class="form-control" placeholder="username" required autofocus>
+                    </div>
+                </div>
 
-                <label for="inputPassword">Password</label>
-                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required
-                       autofocus>
+                <div class="form-group row">
+                    <label for="inputPassword" class="col-form-label col-sm-3">Password</label>
+                    <div class="col-sm-8">
+                        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required
+                               autofocus>
+                    </div>
+                </div>
 
-                <label for="inputConfermaPassword">Conferma Password</label>
-                <input type="password" id="inputConfermaPassword" class="form-control" placeholder="Password" required
-                       autofocus>
+                <div class="form-group row">
+                    <label for="inputConfermaPassword" class="col-form-label col-sm-3">Conferma Password</label>
+                    <div class="col-sm-8">
+                        <input type="password" id="inputConfermaPassword" class="form-control" placeholder="Password" required
+                               autofocus>
+                    </div>
+                </div>
 
             </div>
 
@@ -47,23 +59,50 @@
 
                 <h2 class="form-registrazione-heading text-center">Dati anagrafici</h2>
 
-                <label for="inputNome">Nome</label>
-                <input type="text" id="inputNome" class="form-control" placeholder="Filippo" required autofocus>
+                <div class="form-group row">
+                    <label for="inputNome" class="col-form-label col-sm-3">Nome</label>
+                    <div class="col-sm-8">
+                        <input type="text" id="inputNome" class="form-control" placeholder="Filippo" required autofocus>
+                    </div>
+                </div>
 
-                <label for="inputCognome">Cognome</label>
-                <input type="text" id="inputCognome" class="form-control" placeholder="Ganna" required autofocus>
+                <div class="form-group row">
+                    <label for="inputCognome" class="col-form-label col-sm-3">Cognome</label>
+                    <div class="col-sm-8">
+                        <input type="text" id="inputCognome" class="form-control" placeholder="Ganna" required
+                               autofocus>
+                    </div>
+                </div>
 
-                <label for="inputProvincia">Provincia</label>
-                <input type="text" id="inputProvincia" class="form-control" placeholder="Salerno" required autofocus>
+                <div class="form-group row">
+                    <label for="inputProvincia" class="col-form-label col-sm-3">Provincia</label>
+                    <div class="col-sm-8">
+                        <input type="text" id="inputProvincia" class="form-control" placeholder="Salerno" required
+                               autofocus>
+                    </div>
+                </div>
 
-                <label for="inputCitta">Città</label>
-                <input type="text" id="inputCitta" class="form-control" placeholder="Baronissi" required autofocus>
+                <div class="form-group row">
+                    <label for="inputCitta" class="col-form-label col-sm-3">Città</label>
+                    <div class="col-sm-8">
+                        <input type="text" id="inputCitta" class="form-control" placeholder="Baronissi" required
+                               autofocus>
+                    </div>
+                </div>
 
-                <label for="inputVia">Via</label>
-                <input type="text" id="inputVia" class="form-control" placeholder="Via Roma" required autofocus>
+                <div class="form-group row">
+                    <label for="inputVia" class="col-form-label col-sm-3">Via</label>
+                    <div class="col-sm-8">
+                        <input type="text" id="inputVia" class="form-control" placeholder="Via Roma" required autofocus>
+                    </div>
+                </div>
 
-                <label for="inputTel">Recapitp telefonico</label>
-                <input type="tel" id="inputTel" class="form-control" placeholder="1234567890" autofocus>
+                <div class="form-group row">
+                    <label for="inputTel" class="col-form-label col-sm-3">Recapito telefonico</label>
+                    <div class="col-sm-8">
+                        <input type="tel" id="inputTel" class="form-control" placeholder="1234567890" autofocus>
+                    </div>
+                </div>
 
             </div>
 
