--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,8 +11,8 @@
     <form th:action="@{/autenticazione/login}" method="post" class="form-signin">
 
         <h3 class="form-signin-heading">Login Utente</h3>
-        <input type="email" id="inputEmail" class="form-control" name="email" placeholder="esempio@esempio.com">
-        <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password">
+        <input type="email" id="inputEmail" class="form-control" name="email" placeholder="esempio@esempio.com" required autofocus>
+        <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
 </div>
