modifiche registrazione lettore
@BearGrillz99

--- a/src/main/resources/templates/registrazione_lettore.html
+++ b/src/main/resources/templates/registrazione_lettore.html
@@ -25,7 +25,7 @@
                 <div class="form-group row">
                     <label for="inputEmail" class="col-form-label col-sm-3">Indirizzo Email</label>
                     <div class="col-sm-8">
-                        <input type="email" id="inputEmail" class="form-control" placeholder="esempio@esempio.com" required
+                        <input type="email" id="inputEmail" name="email" class="form-control" placeholder="esempio@esempio.com" required
                                autofocus>
                     </div>
                 </div>
@@ -33,22 +33,22 @@
                 <div class="form-group row">
                     <label for="inputUsername" class="col-form-label col-sm-3">Username</label>
                     <div class="col-sm-8">
-                        <input type="text" id="inputUsername" class="form-control" placeholder="username" required autofocus>
+                        <input type="text" id="inputUsername" name="username" class="form-control" placeholder="username" required autofocus>
                     </div>
                 </div>
 
                 <div class="form-group row">
                     <label for="inputPassword" class="col-form-label col-sm-3">Password</label>
                     <div class="col-sm-8">
-                        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required
+                        <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required
                                autofocus>
                     </div>
                 </div>
 
                 <div class="form-group row">
-                    <label for="inputConfermaPassword" class="col-form-label col-sm-3">Conferma Password</label>
+                    <label for="inputconferma_password" class="col-form-label col-sm-3">Conferma Password</label>
                     <div class="col-sm-8">
-                        <input type="password" id="inputConfermaPassword" class="form-control" placeholder="Password" required
+                        <input type="password" id="inputconferma_password" name="conferma_password" class="form-control" placeholder="Password" required
                                autofocus>
                     </div>
                 </div>
@@ -62,14 +62,14 @@
                 <div class="form-group row">
                     <label for="inputNome" class="col-form-label col-sm-3">Nome</label>
                     <div class="col-sm-8">
-                        <input type="text" id="inputNome" class="form-control" placeholder="Filippo" required autofocus>
+                        <input type="text" id="inputNome" name="nome" class="form-control" placeholder="Filippo" required autofocus>
                     </div>
                 </div>
 
                 <div class="form-group row">
                     <label for="inputCognome" class="col-form-label col-sm-3">Cognome</label>
                     <div class="col-sm-8">
-                        <input type="text" id="inputCognome" class="form-control" placeholder="Ganna" required
+                        <input type="text" id="inputCognome" name="cognome" class="form-control" placeholder="Ganna" required
                                autofocus>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                 <div class="form-group row">
                     <label for="inputProvincia" class="col-form-label col-sm-3">Provincia</label>
                     <div class="col-sm-8">
-                        <input type="text" id="inputProvincia" class="form-control" placeholder="Salerno" required
+                        <input type="text" id="inputProvincia" name="provincia" class="form-control" placeholder="Salerno" required
                                autofocus>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                 <div class="form-group row">
                     <label for="inputCitta" class="col-form-label col-sm-3">Città</label>
                     <div class="col-sm-8">
-                        <input type="text" id="inputCitta" class="form-control" placeholder="Baronissi" required
+                        <input type="text" id="inputCitta" name="citta" class="form-control" placeholder="Baronissi" required
                                autofocus>
                     </div>
                 </div>
@@ -93,14 +93,14 @@
                 <div class="form-group row">
                     <label for="inputVia" class="col-form-label col-sm-3">Via</label>
                     <div class="col-sm-8">
-                        <input type="text" id="inputVia" class="form-control" placeholder="Via Roma" required autofocus>
+                        <input type="text" id="inputVia" name="via" class="form-control" placeholder="Via Roma" required autofocus>
                     </div>
                 </div>
 
                 <div class="form-group row">
                     <label for="inputTel" class="col-form-label col-sm-3">Recapito telefonico</label>
                     <div class="col-sm-8">
-                        <input type="tel" id="inputTel" class="form-control" placeholder="1234567890" autofocus>
+                        <input type="tel" id="inputTel" name="recapitoTelefonico" class="form-control" placeholder="1234567890" autofocus>
                     </div>
                 </div>
 
