--- a/src/main/resources/templates/registrazione_biblioteca.html
+++ b/src/main/resources/templates/registrazione_biblioteca.html
@@ -83,7 +83,7 @@
                     </div>
                 </div>
 
-                <div class="form-group row">
+                <div class="form-group row" style="margin-bottom: 2%;">
                     <label for="inputTel" class="col-form-label col-sm-3">Recapito telefonico</label>
                     <div class="col-sm-8">
                         <input type="tel" id="inputTel" name="recapitoTelefonico" class="form-control" placeholder="1234567890" autofocus>
