--- a/src/main/resources/templates/prenota-libro.html
+++ b/src/main/resources/templates/prenota-libro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Prenota libro</title>
-    <link rel="stylesheet" th:href="@{~/style/prenotazione-libri.css}"></style>
+    <link rel="stylesheet" th:href="@{~/style/prenotazione-libri.css}" />
 </head>
 
 <body>
