Immagini di bozza
Co-Authored-By: rayleighRe1 <69469718+rayleighRe1@users.noreply.github.com>

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
         <h3 class="form-signin-heading">Login Utente</h3>
         <input type="email" id="inputEmail" class="form-control" name="email" placeholder="esempio@esempio.com" required autofocus>
         <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Accedi</button>
     </form>
 </div>
 </body>
