Inizio implementazione backend

--- a/src/main/resources/templates/visualizza-richieste.html
+++ b/src/main/resources/templates/visualizza-richieste.html
@@ -23,7 +23,7 @@
                                 <form>
                                     <div class="card-text">
                                         Giorni di durata del prestito
-                                        <input type="number" min="7" max="60" width="60px" >
+                                        <input type="number" name="giorni" min="7" max="60" width="60px" >
                                     </div>
                                     <input type="submit" class="btn red-button" value="Accetta" style="width: 80px"></input>
                                 </form>
