--- a/src/main/resources/templates/registrazione_esperto.html
+++ b/src/main/resources/templates/registrazione_esperto.html
@@ -3,6 +3,7 @@
       layout:decorate="~{layout/common}">
 <head>
     <link rel="stylesheet" type="text/css" href="../../style/registrazione.css">
+    <link rel="stylesheet" type="text/css" href="../../style/style.css">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
@@ -136,7 +137,7 @@
                     </div>
 
                     <div class="text-center">
-                        <button class="btn btn-lg btn-block registra" type="submit">Registrami</button>
+                        <button class="btn btn-main" type="submit">Registrami</button>
                     </div>
 
         </form>
