--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,6 +3,7 @@
       layout:decorate="~{layout/layout}">
 <head>
     <link rel="stylesheet" type="text/css" href="../../style/login.css">
+    <link rel="stylesheet" type="text/css" href="../../style/style.css">
     <meta charset="UTF-8">
     <title>Login</title>
 </head>
@@ -13,7 +14,7 @@
         <h3 class="form-signin-heading">Login Utente</h3>
         <input type="email" id="inputEmail" class="form-control" name="email" placeholder="esempio@esempio.com" required autofocus>
         <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Accedi</button>
+        <button class="btn btn-main " type="submit">Accedi</button>
     </form>
 </div>
 </body>
