Implementata view per accettazione
RIFARE TEST A CONTROLLER

--- a/src/main/resources/templates/visualizza-libri-prenotabili.html
+++ b/src/main/resources/templates/visualizza-libri-prenotabili.html
@@ -10,7 +10,7 @@
         <h2>Ricerca per titolo</h2>
         <form method="get" action="/prenotazione-libri/ricerca-titolo">
             <input type="text" name="titolo">
-            <input type="submit">
+            <input class="btn-main" type="submit" value="Cerca">
         </form>
         <table class="table" style="border-color:#b20909">
                 <tr>
