--- a/src/main/resources/templates/registrazione.html
+++ b/src/main/resources/templates/registrazione.html
@@ -8,18 +8,19 @@
 <body>
 <div layout:fragment="contenuto-pagina">
     <div class="container">
+        <form th:action="@{/registrazione/scegli}" method="post">
         <div class="row">
-            <form th:action="@{/registrazione/scegli}" method="post">
+
                 <div class="col">
                     <button type="submit" value="Lettore" name="scelta"><img
-                            th:src="@{https://data.whicdn.com/images/231423612/original.jpg}"></button>
+                            th:src="@{../static/image/registrazione/Lettore.jpeg}"></button>
 
                     <p>Ciao! Clicca qui se sei un lettore.</p>
                 </div>
 
                 <div class="col">
                     <button type="submit" value="Esperto" name="scelta"><img
-                            th:src="@{https://lh3.googleusercontent.com/proxy/jfHIv7jA7JyFGfki-2Ajzo_bbaVmU0If0K_NEgiO-gXXW16ttj3UYyTxswdCHMH6sRxHPymLGxxiGYMEWpM_NbLPqN2UveM1_ApQZvyRmsN6jkA}">
+                            th:src="@{../static/image/registrazione/Esperto.jpg}">
                     </button>
 
                     <p>Ciao! Clicca qui se sei un esperto.</p>
@@ -27,14 +28,14 @@
 
                 <div class="col">
                     <button type="submit" value="Biblioteca" name="scelta"><img
-                            th:src="@{https://i.kym-cdn.com/entries/icons/facebook/000/026/029/8P68F-_I_400x400.jpg}">
+                            th:src="@{../static/image/registrazione/Biblioteca.jpg}">
                     </button>
 
                     <p>Ciao! Clicca qui se sei una biblioteca.</p>
                 </div>
-            </form>
-        </div>
 
+        </div>
+        </form>
 
     </div>
 </div>
