--- a/src/main/resources/templates/registrazione.html
+++ b/src/main/resources/templates/registrazione.html
@@ -13,25 +13,31 @@
 
                 <div class="col">
                     <button type="submit" value="Lettore" name="scelta"><img
-                            th:src="@{../static/image/registrazione/Lettore.jpeg}"></button>
+                            th:src="@{~/image/registrazione/Lettore.jpeg}"></button>
 
-                    <p>Ciao! Clicca qui se sei un lettore.</p>
+                    <p>Clicca sull'immagine per registrati come lettore.
+                    Potrai prenotare libri, iscriverti a club e
+                    prendere parte ad eventi.</p>
                 </div>
 
                 <div class="col">
                     <button type="submit" value="Esperto" name="scelta"><img
-                            th:src="@{../static/image/registrazione/Esperto.jpg}">
+                            th:src="@{~/image/registrazione/Esperto.jpg}">
                     </button>
 
-                    <p>Ciao! Clicca qui se sei un esperto.</p>
+                    <p>Clicca sull'immagine per registrati come esperto.
+                    Potrai organizzare eventi nella biblioteca dove lavori
+                    e creare club.</p>
                 </div>
 
                 <div class="col">
                     <button type="submit" value="Biblioteca" name="scelta"><img
-                            th:src="@{../static/image/registrazione/Biblioteca.jpg}">
+                            th:src="@{~/image/registrazione/Biblioteca.jpg}">
                     </button>
 
-                    <p>Ciao! Clicca qui se sei una biblioteca.</p>
+                    <p>Clicca sull'immagine per registrarti come biblioteca.
+                    Potrai far prenotare i tuoi libri, ospitare club del libro e
+                    tanto altro ancora...</p>
                 </div>
 
         </div>
